--- a/index.html
+++ b/index.html
@@ -3,31 +3,37 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width" />
     <title>Barbería Alura</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
       rel="stylesheet"
+    />
+    <!-- csn icon link-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
   </head>
 
   <body>
     <header>
       <div class="caja">
-        <h1><img src="imagenes/logo.png" /></h1>
+        <a href="#"><img src="imagenes/logo.png" alt="Logo de la Barbería" class="logo" /><a>
         <nav>
           <ul>
             <li><a href="index.html" id="selected">Home</a></li>
-            <li><a href="productos.html" id="selected">Productos</a></li>
-            <li><a href="contacto.html" id="selected">Contacto</a></li>
+            <li><a href="views/productos.html" id="selected">Productos</a></li>
+            <li><a href="views/presupuesto.html" id="selected">Contacto</a></li>
           </ul>
         </nav>
       </div>
     </header>
 
-    <img class="banner" src="banner/banner.jpg" />
+    <img class="banner" src="imagenes/banner.jpg" />
 
     <main>
       <section class="principal">
@@ -70,7 +76,7 @@
         <p>Nuestro establecimiento está ubicado en el corazón de la ciudad</p>
         <div class="mapa-contenido">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d97210.33214846013!2d-3.7093376000000005!3d40.412774399999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42288cf1025693%3A0xf80fc030771a0cda!2sC.%20de%20El%20Espa%C3%B1oleto%2C%207%2C%2028010%20Madrid!5e0!3m2!1ses!2ses!4v1673739904950!5m2!1ses!2ses"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.5379712842723!2d-3.700011624131069!3d40.44122857143564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228f0d66f20dd%3A0xd2f315a5e7718fbe!2sAcademia%20Oposiciones%20y%20Cursos%20%7C%20MasterD%20Madrid!5e0!3m2!1ses!2ses!4v1705861032280!5m2!1ses!2ses" 
             width="100%"
             height="300"
             style="border: 0"
@@ -93,10 +99,24 @@
             <li class="items">Puntualidad</li>
             <li class="items">Limpieza</li>
           </ul>
-          <img
-            src="diferenciales/diferenciales.jpeg"
-            class="imagen-diferenciales"
-          />
+          <section class="caja-diferenciales">
+            <img
+              src="imagenes/diferenciales.jpeg"
+              class="imagen-diferenciales"
+            />
+            <img
+              src="imagenes/diferenciales2.jpg"
+              class="imagen-diferenciales"
+            />
+            <img
+              src="imagenes/diferenciales3.jpg"
+              class="imagen-diferenciales"
+            />
+            <img
+              src="imagenes/diferenciales4.jpg"
+              class="imagen-diferenciales"
+            />
+          </section>
         </div>
         <div class="video">
           <iframe
@@ -111,9 +131,61 @@
         </div>
       </section>
     </main>
-    <footer>
-      <img src="imagenes/logo-blanco.png" alt="Logo de la Barbería Alura" />
-      <p class="copyright">&copy Copyright Barbería Alura - 2020</p>
+
+    <!-- footer section start here -->
+
+    <footer class="footer" id="contact">
+      
+      <div class="box-container">
+        <div class="content">
+        <a href="#"><img src="./imagenes/logo.png" alt="Logo" class="logo" /></a>
+        <h1 class="logoName">ByAlex BarberShop</h1>
+      </div>
+        <div class="box">
+          <h3>Quick link</h3>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
+        </div>
+        <div class="box">
+          <h3>Extra link</h3>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
+        </div>
+        <div class="box">
+          <h3>Extra Link</h3>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Account info</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Order item</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Privacy policy</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Payment method</a>
+          <a href="#"> <i class="fas fa-arrow-right"></i>Our services</a>
+        </div>
+
+        <div class="box">
+          <h3>Contact Info</h3>
+          <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
+          <a href="#">
+            <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a
+          >
+          <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66"> <i class="fas fa-map"></i>Map</a>
+        </div>
+      </div>
+
+      <div class="share">
+        <a href="#" class="fab fa-facebook"></a>
+        <a href="#" class="fab fa-twitter"></a>
+        <a href="#" class="fab fa-instagram"></a>
+        <a href="#" class="fab fa-linkedin"></a>
+        <a href="#" class="fab fa-pinterest"></a>
+      </div>
+      <div class="credit">
+        © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
+      </div>
     </footer>
   </body>
 </html>
