--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Barbería Alura</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Fuente de texto -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
       rel="stylesheet"
     />
-    <!-- csn icon link-->
+    <!-- Link iconos CSS-->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -20,24 +21,25 @@
   </head>
 
   <body>
+    <!-- Iniciamos el encabezado -->
     <header>
       <div class="caja">
         <a href="#"><img src="imagenes/logo.png" alt="Logo de la Barbería" class="logo" /><a>
-        <nav>
+        <nav> <!-- Agregamos la barra de navegación -->
           <ul>
-            <li><a href="index.html" id="selected">Home</a></li>
-            <li><a href="views/productos.html" id="selected">Productos</a></li>
-            <li><a href="views/presupuesto.html" id="selected">Contacto</a></li>
+            <li><a id="selected" href="index.html" >Home</a></li>
+            <li><a href="views/productos.html" >Productos</a></li>
+            <li><a href="views/presupuesto.html" >Contacto</a></li>
           </ul>
         </nav>
       </div>
     </header>
-
+    <!-- Insetamos nuestro banner -->
     <img class="banner" src="imagenes/banner.jpg" />
 
-    <main>
+    <main> <!-- Iniciamos el cuerpo con una intro -->
       <section class="principal">
-        <h2 class="titulo-principal">Sobre la Barbería Alura</h2>
+        <h2 class="titulo-principal">Sobre la Barbería ByAlex</h2>
 
         <img
           class="utensilios"
@@ -48,7 +50,7 @@
         <p>
           Ubicada en el corazón de la ciudad, la
           <strong>Barbería Alura</strong> trae para el mercado lo que hay de
-          mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya
+          mejor para su cabello y barba. Fundada en 2020, la Barbería ByAlex ya
           es destaque en la ciudad y conquista nuevos clientes diariamente.
         </p>
 
@@ -172,7 +174,7 @@
           <a href="#">
             <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a
           >
-          <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66"> <i class="fas fa-map"></i>Map</a>
+          <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66"> <i class="fas fa-map"></i>Ubicación <div>(Calle de Alonso Cano, 44, 46, 28003 Madrid.)</div> </a>
         </div>
       </div>
 
@@ -185,7 +187,7 @@
       </div>
       <div class="credit">
         © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
-      </div>
+        </div>
     </footer>
   </body>
 </html>
