--- a/index.html
+++ b/index.html
@@ -1,181 +1,136 @@
 <!DOCTYPE html>
 
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Barbería Alura</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <!-- Fuente de texto -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Link iconos CSS-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
-  </head>
 
-  <body>
-    <!-- Iniciamos el encabezado -->
-    <header>
-      <div class="caja">
-        <a href="#"><img src="imagenes/logo.png" alt="Logo de la Barbería" class="logo" /><a>
-        <nav> <!-- Agregamos la barra de navegación -->
-          <ul>
-            <li><a id="selected" href="index.html" >Home</a></li>
-            <li><a href="views/productos.html" >Productos</a></li>
-            <li><a href="views/presupuesto.html" >Contacto</a></li>
-          </ul>
-        </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width" />
+  <title>Barbería ByAlex</title>
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <!-- Fuente de texto -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet" />
+  <!-- Link iconos CSS-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+</head>
+
+<body>
+  <!-- Iniciamos el encabezado -->
+  <header>
+    <div class="caja">
+      <a href="#"><img src="imagenes/logo.png" alt="Logo de la Barbería" class="logo" /><a>
+          <nav> <!-- Agregamos la barra de navegación -->
+            <ul>
+              <li><a id="selected" href="index.html">Home</a></li>
+              <li><a href="views/productos.html">Productos</a></li>
+              <li><a href="views/presupuesto.html">Contacto</a></li>
+              <li><a href="views/contacto.html">Contacto</a></li>
+            </ul>
+          </nav>
+    </div>
+  </header>
+  <!-- Insetamos nuestro banner -->
+  <img class="banner" src="imagenes/banner.jpg" />
+
+  <main> <!-- Iniciamos el cuerpo con una intro -->
+    <section class="principal">
+      <h2 class="titulo-principal">Sobre la Barbería ByAlex</h2>
+
+      <img class="utensilios" src="imagenes/utensilios.jpg" alt="Utensilios de un barbero" />
+
+      <p>
+        Ubicada en el corazón de la ciudad, la
+        <strong>Barbería Alura</strong> trae para el mercado lo que hay de
+        mejor para su cabello y barba. Fundada en 2020, la Barbería ByAlex ya
+        es destaque en la ciudad y conquista nuevos clientes diariamente.
+      </p>
+
+      <p id="mision">
+        <em>Nuestra misión es:
+          <strong>"Proporcionar autoestima y calidad de vida a nuestros
+            clientes"</strong>.</em>
+      </p>
+
+      <p>
+        Ofrecemos profesionales experimentados que están constantemente
+        observando los cambios y movimiento en el mundo de la moda, para así
+        ofrecer a nuestros clientes las últimas tendencias. El atendimiento
+        posee un padrón de excelencia y agilidad, garantizando calidad y
+        satisfacción de nuestros clientes.
+      </p>
+    </section>
+
+
+
+    <section class="diferenciales">
+      <h3 class="titulo-principal">Diferenciales</h3>
+
+      <div class="contenido-diferenciales">
+        <ul class="lista-diferenciales">
+          <li class="items">Atención personalizada a los clientes</li>
+          <li class="items">Espacio diferenciado</li>
+          <li class="items">Localización</li>
+          <li class="items">Profesesionales calificados</li>
+          <li class="items">Puntualidad</li>
+          <li class="items">Limpieza</li>
+        </ul>
+        <section class="caja-diferenciales">
+          <img src="imagenes/diferenciales.jpeg" class="imagen-diferenciales" />
+          <img src="imagenes/diferenciales2.jpg" class="imagen-diferenciales" />
+          <img src="imagenes/diferenciales3.jpg" class="imagen-diferenciales" />
+          <img src="imagenes/diferenciales4.jpg" class="imagen-diferenciales" />
+        </section>
       </div>
-    </header>
-    <!-- Insetamos nuestro banner -->
-    <img class="banner" src="imagenes/banner.jpg" />
+      <div class="video">
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+    </section>
+  </main>
 
-    <main> <!-- Iniciamos el cuerpo con una intro -->
-      <section class="principal">
-        <h2 class="titulo-principal">Sobre la Barbería ByAlex</h2>
+  <!-- footer section start here -->
 
-        <img
-          class="utensilios"
-          src="imagenes/utensilios.jpg"
-          alt="Utensilios de un barbero"
-        />
+  <footer class="footer" id="contact">
 
-        <p>
-          Ubicada en el corazón de la ciudad, la
-          <strong>Barbería Alura</strong> trae para el mercado lo que hay de
-          mejor para su cabello y barba. Fundada en 2020, la Barbería ByAlex ya
-          es destaque en la ciudad y conquista nuevos clientes diariamente.
-        </p>
-
-        <p id="mision">
-          <em
-            >Nuestra misión es:
-            <strong
-              >"Proporcionar autoestima y calidad de vida a nuestros
-              clientes"</strong
-            >.</em
-          >
-        </p>
-
-        <p>
-          Ofrecemos profesionales experimentados que están constantemente
-          observando los cambios y movimiento en el mundo de la moda, para así
-          ofrecer a nuestros clientes las últimas tendencias. El atendimiento
-          posee un padrón de excelencia y agilidad, garantizando calidad y
-          satisfacción de nuestros clientes.
-        </p>
-      </section>
-
-      <section class="mapa">
-        <h3 class="titulo-principal">Nuestra Ubicación</h3>
-        <p>Nuestro establecimiento está ubicado en el corazón de la ciudad</p>
-        <div class="mapa-contenido">
-          <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.5379712842723!2d-3.700011624131069!3d40.44122857143564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4228f0d66f20dd%3A0xd2f315a5e7718fbe!2sAcademia%20Oposiciones%20y%20Cursos%20%7C%20MasterD%20Madrid!5e0!3m2!1ses!2ses!4v1705861032280!5m2!1ses!2ses" 
-            width="100%"
-            height="300"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-      </section>
-
-      <section class="diferenciales">
-        <h3 class="titulo-principal">Diferenciales</h3>
-
-        <div class="contenido-diferenciales">
-          <ul class="lista-diferenciales">
-            <li class="items">Atención personalizada a los clientes</li>
-            <li class="items">Espacio diferenciado</li>
-            <li class="items">Localización</li>
-            <li class="items">Profesesionales calificados</li>
-            <li class="items">Puntualidad</li>
-            <li class="items">Limpieza</li>
-          </ul>
-          <section class="caja-diferenciales">
-            <img
-              src="imagenes/diferenciales.jpeg"
-              class="imagen-diferenciales"
-            />
-            <img
-              src="imagenes/diferenciales2.jpg"
-              class="imagen-diferenciales"
-            />
-            <img
-              src="imagenes/diferenciales3.jpg"
-              class="imagen-diferenciales"
-            />
-            <img
-              src="imagenes/diferenciales4.jpg"
-              class="imagen-diferenciales"
-            />
-          </section>
-        </div>
-        <div class="video">
-          <iframe
-            width="100%"
-            height="315"
-            src="https://www.youtube.com/embed/wcVVXUV0YUY"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-        </div>
-      </section>
-    </main>
-
-    <!-- footer section start here -->
-
-    <footer class="footer" id="contact">
-      
-      <div class="box-container">
-        <div class="content">
+    <div class="box-container">
+      <div class="content">
         <a href="#"><img src="./imagenes/logo.png" alt="Logo" class="logo" /></a>
         <h1 class="logoName">ByAlex BarberShop</h1>
       </div>
-        <div class="box">
-          <h3>Quick link</h3>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-        </div>
-        <div class="box">
-          <h3>Extra link</h3>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
-        </div>
-        <div class="box">
-          <h3>Extra Link</h3>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Account info</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Order item</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Privacy policy</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Payment method</a>
-          <a href="#"> <i class="fas fa-arrow-right"></i>Our services</a>
-        </div>
+      <div class="box">
+        <h3>Quick link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
+      </div>
+      <div class="box">
+        <h3>Extra link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Home</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Product</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Blogs</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
+      </div>
+      <div class="box">
+        <h3>Extra Link</h3>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Account info</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Order item</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Privacy policy</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Payment method</a>
+        <a href="#"> <i class="fas fa-arrow-right"></i>Our services</a>
+      </div>
 
-        <div class="box">
-          <h3>Contact Info</h3>
-          <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
-          <a href="#">
-            <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a
-          >
-          <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66"> <i class="fas fa-map"></i>Ubicación <div>(Calle de Alonso Cano, 44, 46, 28003 Madrid.)</div> </a>
-        </div>
+      <div class="box">
+        <h3>Contact Info</h3>
+        <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
+        <a href="#">
+          <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
+
       </div>
 
       <div class="share">
@@ -187,7 +142,8 @@
       </div>
       <div class="credit">
         © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
-        </div>
-    </footer>
-  </body>
+      </div>
+  </footer>
+</body>
+
 </html>
