--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
         satisfacción de nuestros clientes.
       </p>
     </section>
-
-
-
+    <!-- Mencionamos nuestras carácterísticas diferenciales y mostramos algo del trabajo que se realiza-->
     <section class="diferenciales">
       <h3 class="titulo-principal">Diferenciales</h3>
 
@@ -91,7 +89,7 @@
     </section>
   </main>
 
-  <!-- footer section start here -->
+  <!-- Iniciamos el footer -->
 
   <footer class="footer" id="contact">
 
@@ -130,19 +128,24 @@
         <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
         <a href="#">
           <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
-
+        <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
+          <i class="fa-regular fa-map"></i>Ubicación:
+          <a>Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
+        </a>
       </div>
 
-      <div class="share">
-        <a href="#" class="fab fa-facebook"></a>
-        <a href="#" class="fab fa-twitter"></a>
-        <a href="#" class="fab fa-instagram"></a>
-        <a href="#" class="fab fa-linkedin"></a>
-        <a href="#" class="fab fa-pinterest"></a>
-      </div>
-      <div class="credit">
-        © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
-      </div>
+
+    </div>
+    <div class="share">
+      <a href="#" class="fab fa-facebook"></a>
+      <a href="#" class="fab fa-twitter"></a>
+      <a href="#" class="fab fa-instagram"></a>
+      <a href="#" class="fab fa-linkedin"></a>
+      <a href="#" class="fab fa-pinterest"></a>
+    </div>
+    <div class="credit">
+      © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
+    </div>
   </footer>
 </body>
 
