--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <li><a id="selected" href="index.html">Home</a></li>
               <li><a href="views/productos.html">Productos</a></li>
               <li><a href="views/presupuesto.html">Contacto</a></li>
-              <li><a href="views/contacto.html">Contacto</a></li>
+              <li><a href="views/contacto.html">Ubicación</a></li>
             </ul>
           </nav>
     </div>
