--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <p>
         Ubicada en el corazón de la ciudad, la
-        <strong>Barbería Alura</strong> trae para el mercado lo que hay de
+        <strong>Barbería ByAlex</strong> trae para el mercado lo que hay de
         mejor para su cabello y barba. Fundada en 2020, la Barbería ByAlex ya
         es destaque en la ciudad y conquista nuevos clientes diariamente.
       </p>
