--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
   <!-- Iniciamos el encabezado -->
   <header>
-    <div class="caja">
-      <a href="#"><img src="imagenes/logo.png" alt="Logo de la Barbería" class="logo" /><a>
+    < class="caja">
+      <a href="#"><img src="imagenes/logo.png" alt="Logo de la Barbería" class="logo"/></a>
           <nav> <!-- Agregamos la barra de navegación -->
             <ul>
               <li><a id="selected" href="index.html">Home</a></li>
@@ -137,11 +137,11 @@
 
     </div>
     <div class="share">
-      <a href="#" class="fab fa-facebook"></a>
-      <a href="#" class="fab fa-twitter"></a>
-      <a href="#" class="fab fa-instagram"></a>
-      <a href="#" class="fab fa-linkedin"></a>
-      <a href="#" class="fab fa-pinterest"></a>
+      <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
+      <a href="https://twitter.com/barberiamaso" class="fab fa-twitter"></a>
+      <a href="https://www.instagram.com/barberiadeivan/" class="fab fa-instagram"></a>
+      <a href="https://www.linkedin.com/company/barberia/" class="fab fa-linkedin"></a>
+      <a href="https://www.pinterest.es/negrabarberia/" class="fab fa-pinterest"></a>
     </div>
     <div class="credit">
       © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
