--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 <body>
   <!-- Iniciamos el encabezado -->
   <header>
-    < class="caja">
-      <a href="#"><img src="imagenes/logo.png" alt="Logo de la Barbería" class="logo"/></a>
-          <nav> <!-- Agregamos la barra de navegación -->
-            <ul>
-              <li><a id="selected" href="index.html">Home</a></li>
-              <li><a href="views/productos.html">Productos</a></li>
-              <li><a href="views/presupuesto.html">Contacto</a></li>
-              <li><a href="views/contacto.html">Ubicación</a></li>
-            </ul>
-          </nav>
+    <div class="caja">
+      <a href="#"><img src="imagenes/logo.png" alt="Logo de la Barbería" class="logo" /></a>
+      <nav> <!-- Agregamos la barra de navegación -->
+        <ul>
+          <li><a id="selected" href="index.html">Home</a></li>
+          <li><a href="views/productos.html">Productos</a></li>
+          <li><a href="views/presupuesto.html">Contacto</a></li>
+          <li><a href="views/contacto.html">Ubicación</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
   <!-- Insetamos nuestro banner -->
