--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
   </header>
   <!-- Insetamos nuestro banner -->
-  <img class="banner" src="imagenes/banner.jpg" />
+  <img class="banner" src="imagenes/banner.jpg" alt="imagen banner" />
 
   <main> <!-- Iniciamos el cuerpo con una intro -->
     <section class="principal">
@@ -74,15 +74,15 @@
           <li class="items">Limpieza</li>
         </ul>
         <section class="caja-diferenciales">
-          <img src="imagenes/diferenciales.jpeg" class="imagen-diferenciales" />
-          <img src="imagenes/diferenciales2.jpg" class="imagen-diferenciales" />
-          <img src="imagenes/diferenciales3.jpg" class="imagen-diferenciales" />
-          <img src="imagenes/diferenciales4.jpg" class="imagen-diferenciales" />
+          <img src="imagenes/diferenciales.jpeg" class="imagen-diferenciales" alt="imagen diferencial 1" />
+          <img src="imagenes/diferenciales2.jpg" class="imagen-diferenciales" alt="imagen diferencial 2" />
+          <img src="imagenes/diferenciales3.jpg" class="imagen-diferenciales" alt="imagen diferencial 3" />
+          <img src="imagenes/diferenciales4.jpg" class="imagen-diferenciales" alt="imagen diferencial 4" />
         </section>
       </div>
       <div class="video">
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player"
-          frameborder="0"
+        <iframe width="520px" height="315px" src="https://www.youtube.com/embed/wcVVXUV0YUY"
+          title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </div>
@@ -130,8 +130,7 @@
           <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
         <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
           <i class="fa-regular fa-map"></i>Ubicación:
-          <a>Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
-        </a>
+          Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
       </div>
 
 
