--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
           <li class="items">Puntualidad</li>
           <li class="items">Limpieza</li>
         </ul>
-        <section class="caja-diferenciales">
+        <div class="caja-diferenciales">
           <img src="imagenes/diferenciales.jpeg" class="imagen-diferenciales" alt="imagen diferencial 1" />
           <img src="imagenes/diferenciales2.jpg" class="imagen-diferenciales" alt="imagen diferencial 2" />
           <img src="imagenes/diferenciales3.jpg" class="imagen-diferenciales" alt="imagen diferencial 3" />
           <img src="imagenes/diferenciales4.jpg" class="imagen-diferenciales" alt="imagen diferencial 4" />
-        </section>
+        </div>
       </div>
       <div class="video">
         <iframe width="520px" height="315px" src="https://www.youtube.com/embed/wcVVXUV0YUY"
@@ -131,6 +131,7 @@
         <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
           <i class="fa-regular fa-map"></i>Ubicación:
           Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
+
       </div>
 
 
