--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
         </div>
       </div>
       <div class="video">
-        <iframe width="520px" height="315px" src="https://www.youtube.com/embed/wcVVXUV0YUY"
-          title="YouTube video player" frameborder="0"
+        <iframe width="520" height=" src=" https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </div>
