--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
         </div>
       </div>
       <div class="video">
-        <iframe width="520" height=" src=" https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player"
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=Kp9q2LB6c4FinGbJ"
+          title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </div>
