--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width">
   <title>Barbería ByAlex</title>
-  <link rel="stylesheet" href="css/reset.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- Fuente de texto -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
   <!-- Link iconos CSS-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 
 <body>
   <!-- Iniciamos el encabezado -->
   <header>
     <div class="caja">
-      <a href="#"><img src="imagenes/logo.png" alt="Logo de la Barbería" class="logo" /></a>
+      <a href="#"><img src="imagenes/logo.png" alt="Logo de la Barbería" class="logo"></a>
       <nav> <!-- Agregamos la barra de navegación -->
         <ul>
           <li><a id="selected" href="index.html">Home</a></li>
@@ -31,13 +31,13 @@
     </div>
   </header>
   <!-- Insetamos nuestro banner -->
-  <img class="banner" src="imagenes/banner.jpg" alt="imagen banner" />
+  <img class="banner" src="imagenes/banner.jpg" alt="imagen banner">
 
   <main> <!-- Iniciamos el cuerpo con una intro -->
     <section class="principal">
       <h2 class="titulo-principal">Sobre la Barbería ByAlex</h2>
 
-      <img class="utensilios" src="imagenes/utensilios.jpg" alt="Utensilios de un barbero" />
+      <img class="utensilios" src="imagenes/utensilios.jpg" alt="Utensilios de un barbero">
 
       <p>
         Ubicada en el corazón de la ciudad, la
@@ -74,10 +74,10 @@
           <li class="items">Limpieza</li>
         </ul>
         <div class="caja-diferenciales">
-          <img src="imagenes/diferenciales.jpeg" class="imagen-diferenciales" alt="imagen diferencial 1" />
-          <img src="imagenes/diferenciales2.jpg" class="imagen-diferenciales" alt="imagen diferencial 2" />
-          <img src="imagenes/diferenciales3.jpg" class="imagen-diferenciales" alt="imagen diferencial 3" />
-          <img src="imagenes/diferenciales4.jpg" class="imagen-diferenciales" alt="imagen diferencial 4" />
+          <img src="imagenes/diferenciales.jpeg" class="imagen-diferenciales" alt="imagen diferencial 1">
+          <img src="imagenes/diferenciales2.jpg" class="imagen-diferenciales" alt="imagen diferencial 2">
+          <img src="imagenes/diferenciales3.jpg" class="imagen-diferenciales" alt="imagen diferencial 3">
+          <img src="imagenes/diferenciales4.jpg" class="imagen-diferenciales" alt="imagen diferencial 4">
         </div>
       </div>
       <div class="video">
@@ -95,7 +95,7 @@
 
     <div class="box-container">
       <div class="content">
-        <a href="#"><img src="./imagenes/logo.png" alt="Logo" class="logo" /></a>
+        <a href="#"><img src="./imagenes/logo.png" alt="Logo" class="logo"></a>
         <h1 class="logoName">ByAlex BarberShop</h1>
       </div>
       <div class="box">
