--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Iniciamos el encabezado -->
   <header>
     <div class="caja">
-      <a href="#"><img src="imagenes/logo.png" alt="Logo de la Barbería" class="logo"></a>
+      <a href="#"><img src="imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo"></a>
       <nav> <!-- Agregamos la barra de navegación -->
         <ul>
           <li><a id="selected" href="index.html">Home</a></li>
@@ -31,13 +31,13 @@
     </div>
   </header>
   <!-- Insetamos nuestro banner -->
-  <img class="banner" src="imagenes/banner.jpg" alt="imagen banner">
+  <img class="banner" src="imagenes/banner.jpg" width="620" height="540" alt="imagen banner">
 
   <main> <!-- Iniciamos el cuerpo con una intro -->
     <section class="principal">
       <h2 class="titulo-principal">Sobre la Barbería ByAlex</h2>
 
-      <img class="utensilios" src="imagenes/utensilios.jpg" alt="Utensilios de un barbero">
+      <img class="utensilios" src="imagenes/utensilios.jpg" width="120" height="120" alt="Utensilios de un barbero">
 
       <p>
         Ubicada en el corazón de la ciudad, la
@@ -74,10 +74,14 @@
           <li class="items">Limpieza</li>
         </ul>
         <div class="caja-diferenciales">
-          <img src="imagenes/diferenciales.jpeg" class="imagen-diferenciales" alt="imagen diferencial 1">
-          <img src="imagenes/diferenciales2.jpg" class="imagen-diferenciales" alt="imagen diferencial 2">
-          <img src="imagenes/diferenciales3.jpg" class="imagen-diferenciales" alt="imagen diferencial 3">
-          <img src="imagenes/diferenciales4.jpg" class="imagen-diferenciales" alt="imagen diferencial 4">
+          <img src="imagenes/diferenciales.jpeg" class="imagen-diferenciales" width="220" height="280"
+            alt="imagen diferencial 1">
+          <img src="imagenes/diferenciales2.jpg" class="imagen-diferenciales" width="220" height="280"
+            alt="imagen diferencial 2">
+          <img src="imagenes/diferenciales3.jpg" class="imagen-diferenciales" width="220" height="280"
+            alt="imagen diferencial 3">
+          <img src="imagenes/diferenciales4.jpg" class="imagen-diferenciales" width="220" height="280"
+            alt="imagen diferencial 4">
         </div>
       </div>
       <div class="video">
@@ -95,7 +99,8 @@
 
     <div class="box-container">
       <div class="content">
-        <a href="#"><img src="./imagenes/logo.png" alt="Logo" class="logo"></a>
+        <a href="#"><img src="./imagenes/logo.png" alt="Logo" class="logo" width="220" height="280"
+            alt="imagen-logo"></a>
         <h1 class="logoName">ByAlex BarberShop</h1>
       </div>
       <div class="box">
