--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
         </ul>
       </nav>
     </div>
+    <!-- Insetamos nuestro banner -->
+    <img class="banner" src="imagenes/banner.jpg" alt="imagen banner">
   </header>
-  <!-- Insetamos nuestro banner -->
-  <img class="banner" src="imagenes/banner.jpg" width="620" height="540" alt="imagen banner">
 
-  <main> <!-- Iniciamos el cuerpo con una intro -->
+  <!-- Iniciamos el cuerpo con una intro -->
+  <main>
     <section class="principal">
       <h2 class="titulo-principal">Sobre la Barbería ByAlex</h2>
 
