--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
       </div>
       <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=Kp9q2LB6c4FinGbJ"
+        <iframe  class="frame" width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=Kp9q2LB6c4FinGbJ"
           title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
@@ -134,15 +134,12 @@
         <h3>Contact Info</h3>
         <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
         <a href="#">
-          <i class="fas fa-envelope"></i>ByAlexdesigner@gmail.com</a>
+          <i class="fas fa-envelope"></i>ByAlexdesigner</br>@gmail.com</a>
         <a href="https://maps.app.goo.gl/Zzqcr2AAdP2UDKh66">
           <i class="fa-regular fa-map"></i>Ubicación:
           Calle de Alonso Cano, 44, 46, 28003 Madrid</a>
 
       </div>
-    </div>
-
-
     </div>
     <div class="share">
       <a href="https://www.facebook.com/Barberiadeivan" class="fab fa-facebook"></a>
