--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         </div>
       </div>
       <div class="video">
-        <iframe  class="frame" width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=Kp9q2LB6c4FinGbJ"
-          title="YouTube video player"
+        <iframe class="frame" width="560" height="315"
+          src="https://www.youtube.com/embed/wcVVXUV0YUY?si=Kp9q2LB6c4FinGbJ" title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </div>
@@ -121,15 +121,6 @@
         <a href="#"> <i class="fas fa-arrow-right"></i>Review</a>
         <a href="#"> <i class="fas fa-arrow-right"></i>Contact</a>
       </div>
-      <div class="box">
-        <h3>Extra Link</h3>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Account info</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Order item</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Privacy policy</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Payment method</a>
-        <a href="#"> <i class="fas fa-arrow-right"></i>Our services</a>
-      </div>
-
       <div class="box">
         <h3>Contact Info</h3>
         <a href="#"> <i class="fas fa-phone"></i>+34 641909677</a>
