--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
   <!-- Link iconos CSS-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -33,7 +34,7 @@
   </header>
 
   <!-- Iniciamos el cuerpo con una intro -->
-  <main>
+  <main class="main-index">
     <!-- Insetamos nuestro banner -->
     <img class="banner" src="imagenes/banner.jpg" alt="imagen banner">
     <section class="principal">
@@ -92,6 +93,12 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </div>
+
+      <section class="caja-noticias">
+        <h3 class="titulo-principal">Noticias</h3>
+        <div id="noticias">
+        </div>
+      </section>
     </section>
   </main>
 
@@ -142,6 +149,7 @@
       © Created by <span>Mr. ByAlex Designer</span> |Todos los derechos reservados!
     </div>
   </footer>
+  <script src="../js/noticias.js"></script>
 </body>
 
 </html>
