--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <main class="main-index">
     <!-- Insetamos nuestro banner -->
     <img class="banner" src="imagenes/banner.jpg" alt="imagen banner">
+
     <section class="principal">
       <h2 class="titulo-principal">Sobre la Barbería ByAlex</h2>
 
@@ -93,12 +94,11 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </div>
-
-      <section class="caja-noticias">
-        <h3 class="titulo-principal">Noticias</h3>
-        <div id="noticias">
-        </div>
-      </section>
+    </section>
+    <section class="caja-noticias">
+      <h3 class="titulo-principal">Noticias</h3><br>
+      <div id="noticias">
+      </div>
     </section>
   </main>
 
