--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Iniciamos el encabezado -->
   <header>
     <div class="caja">
-      <a href="#"><img src="imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo"></a>
+      <spam href="#"><img src="imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo"></spam>
       <nav> <!-- Agregamos la barra de navegación -->
       <ul>
         <li><a id="selected" href="index.html">Home</a></li>
