--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <div class="caja">
       <spam href="#"><img src="imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo"></spam>
       <nav> <!-- Agregamos la barra de navegación -->
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+          <i class="fa-solid fa-bars"></i>
+        </label>
+          
       <ul>
         <li><a id="selected" href="index.html">Home</a></li>
         <li><a href="views/productos.html">Productos</a></li>
