Visual OK faltan detalles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <i class="fa-solid fa-bars"></i>
         </label>
           
-      <ul>
+      <ul class="ul-header">
         <li><a id="selected" href="index.html">Home</a></li>
         <li><a href="views/productos.html">Productos</a></li>
         <li><a href="views/presupuesto.html">Contacto</a></li>
