--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
   <!-- Iniciamos el encabezado -->
   <header>
     <div class="caja">
-      <spam href="#"><img src="imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo"></spam>
+      <div href="#"><img src="imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo"></div>
       <nav> <!-- Agregamos la barra de navegación -->
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
           <i class="fa-solid fa-bars"></i>
         </label>
-          
-      <ul class="ul-header">
-        <li><a id="selected" href="index.html">Home</a></li>
-        <li><a href="views/productos.html">Productos</a></li>
-        <li><a href="views/presupuesto.html">Contacto</a></li>
-        <li><a href="views/contacto.html">Ubicación</a></li>
-      </ul>
-    </nav>
+
+        <ul class="ul-header">
+          <li><a id="selected" href="index.html">Home</a></li>
+          <li><a href="views/productos.html">Productos</a></li>
+          <li><a href="views/presupuesto.html">Contacto</a></li>
+          <li><a href="views/contacto.html">Ubicación</a></li>
+        </ul>
+      </nav>
     </div>
-    
+
   </header>
 
   <!-- Iniciamos el cuerpo con una intro -->
