--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
   <!-- Link iconos CSS-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
@@ -20,11 +23,15 @@
   <header>
     <div class="caja">
       <div href="#"><img src="imagenes/logo.png" width="150" height="150" alt="Logo de la Barbería" class="logo"></div>
+      <div class="titulo-h1">
+        <a>BARBERÍA BYALEX</a>
+      </div>
       <nav> <!-- Agregamos la barra de navegación -->
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
           <i class="fa-solid fa-bars"></i>
         </label>
+
 
         <ul class="ul-header">
           <li><a id="selected" href="index.html">Home</a></li>
@@ -43,7 +50,7 @@
 
     <section class="principal">
 
-      <h2 class="titulo-principal">Sobre la Barbería ByAlex</h2>
+      <h2 class="titulo-principal">Conocenos</h2>
 
       <img class="utensilios" src="imagenes/utensilios.jpg" width="120" height="120" alt="Utensilios de un barbero">
 
