--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <!-- Iniciamos el cuerpo con una intro -->
   <main class="main-index">
-    <div class="banner"><img src="imagenes/banner.jpg" alt="imagen banner"></div>
+    <div class="banner"><img src="imagenes/banner.jpg" width="800" height="300" alt="imagen banner"></div>
 
     <section class="principal">
 
